# Metaboscan_diagnostics

./: .gitignore  GrBoost_cardio.pkl  RF_model_1711.pkl  RF_second_model_1911.pkl  TEST_test.xlsx  acillcarnitine_range.xlsx  aminoacids_range.xlsx  bio_df_processing.py  dash_app.py  first_scaler1911.pkl  get_main_figure.py  holin_range.xlsx  pyproject.toml  scaler1911.pkl  triptofanes_range.xlsx
Models/: Models Stage.ipynb  Models Stage_2.ipynb  Models Stage_3.ipynb  Models Stage_4.ipynb  Models five_groups.ipynb  Models five_groups_3.ipynb  Models five_groups_4.ipynb  Models five_groups_5.ipynb  Models five_groups_6.ipynb  Models five_groups_7.ipynb  Models phenotype.ipynb  Models phenotype_2.ipynb  Stage.xlsx  Stage_2.xlsx  Stage_3.xlsx  Stage_4.xlsx  five_groups.xlsx  five_groups_3.xlsx  five_groups_4.xlsx  five_groups_5.xlsx  five_groups_6.xlsx  five_groups_7.xlsx  phenotype.xlsx  phenotype_2.xlsx
assets/: base.css
