[tool.poetry]
name = "bio"
version = "0.1.0"
description = ""
authors = ["mrYush"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.13.0"
dash-table = "^5.0.0"
numpy = "^1.25.2"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
